# wanted-preonboarding-challenge-backend-26

./: Dockerfile  README.md  build.gradle  build.gradle.kts  pyproject.toml  settings.gradle
README/: index.html
docs/: DEVELOPMENT_LOG.md  README.md  REQUIREMENTS.md  TODO.md  _config.yml  index.html  index.md  openapi.json
docs/_layouts/: api.html  default.html
docs/api/: index.html  openapi.json
docs/assets/css/: style.scss
iamport-react-example/: .env
market/: .gitignore  build.gradle
market-api/: build.gradle
market-api/src/main/resources/: messages.properties
market/src/main/resources/: application-SECRET-KEY.properties  application.properties
src/: .gitignore  app.py  containers.py  database.py  route.py
src/common/: auth.py  crypto.py  db_utils.py  error_handler.py
src/main/resources/: application.yaml  application.yml
src/orders/application/: interface.py  service.py
src/orders/domain/: order.py  order_repo.py  payments_repo.py
src/orders/infra/: order_log_repo.py  order_repo.py  payments_repo.py
src/orders/interface/: controller.py  dto.py
src/products/application/: interface.py  service.py
src/products/domain/: product.py  product_repo.py
src/products/infra/: product_repo.py
src/products/interface/: controller.py  dto.py
src/test/resources/: application-test.yaml
src/tests/: products_test.py  users_test.py
src/users/application/: interface.py  service.py
src/users/domain/: user_repo.py
src/users/infra/: user_repo.py
src/users/interface/: controller.py  dto.py
wantedPayment/: build.gradle  settings.gradle
(+327 files in other folders)
